avoid image stretch

--- a/style/carousel.css
+++ b/style/carousel.css
@@ -16,7 +16,8 @@
 }
 .carousel-item #carousel-image {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 .carousel-caption {
 	bottom: 200px;
